memperbaiki aksesibilitas dan performa

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Construction</title>
     <link rel="stylesheet" href="./css/output.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=42dot+Sans:wght@300..800&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Great+Vibes&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Serif+Hentaigana:wght@200..900&family=Playwrite+AU+SA:wght@100..400&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sigmar&display=swap"
-      rel="stylesheet"
-    />
     <script src="script.js"></script>
   </head>
   <body class="font-poppins">
@@ -228,11 +222,11 @@
               <h1 class="font-semibold text-[30px] text-center md:text-2xl md:text-start lg:text-4xl">Featured Project</h1>
               <div>
                 <ul class="flex flex-wrap items-center gap-3 mt-[20px] font-semibold text-white text-[12px] justify-center md:gap-[14px] md:text-[14px] md:justify-start md:mt-0 lg:gap-[14px] lg:text-[16px] lg:mt-0">
-                  <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">Construction</a></li>
-                  <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">Architecture</a></li>
-                  <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">Building</a></li>
-                  <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">Renovations</a></li>
-                  <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">Interior</a></li>
+                  <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="#contruction">Construction</a></li>
+                  <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="#architecture">Architecture</a></li>
+                  <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="#building">Building</a></li>
+                  <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="#renovations">Renovations</a></li>
+                  <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="#interiror">Interior</a></li>
                 </ul>
               </div>
             </div>
@@ -352,11 +346,11 @@
                     type="email" 
                     placeholder="Enter your email address"
                   >
-                  <button class="hover:translate-x-1 transition-transform duration-300">
+                  <a class="hover:translate-x-1 transition-transform duration-300">
                     <svg class="w-6 h-6 cursor-pointer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
                       <path d="M1.99974 13.0001L1.9996 11.0002L18.1715 11.0002L14.2218 7.05044L15.636 5.63623L22 12.0002L15.636 18.3642L14.2218 16.9499L18.1716 13.0002L1.99974 13.0001Z"></path>
                     </svg>
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -384,10 +378,10 @@
               <div class="w-24">
                 <h1 class="text-[18px] font-medium mb-[14px] md:text-[18px] lg:text-[18px]">Link</h1>
                 <ul class="text-[14px] md:text-[16px] lg:text-[16px]">
-                  <li><a href=""></a>Home</li>
-                  <li><a href=""></a>About Us</li>
-                  <li><a href=""></a>Service</li>
-                  <li><a href=""></a>Project</li>
+                  <li><a href="#home"></a>Home</li>
+                  <li><a href="#aboutss"></a>About Us</li>
+                  <li><a href="#services"></a>Services</li>
+                  <li><a href="#project"></a>Project</li>
                 </ul>
               </div>
             </div>
